appontment controller and doctor service changed